ingress-app/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  labels:
    name: ingress-service-expose 
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /     
spec:
  ingressClassName: nginx
  rules:          
  - host: argo.mgmt.ocelottraining.com 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-argo-cd-server
            port: 
              number: 443
  - host: ui.mgmt.ocelottraining.com 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
