ingress-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-expose
  labels:
    name: ingress-service-expose 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /     
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "apple"
        backend:
          service:
            name: apple-service
            port: 
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "mango"
        backend:
          service:
            name: mango-service
            port: 
              number: 80
